# kokkos-extensions

./: README.md
NVSHMEMSpace/: CMakeLists.txt
NVSHMEMSpace/cmake/: LinkCoreTPL.cmake
NVSHMEMSpace/core/src/: Kokkos_NVSHMEM_Space.hpp
NVSHMEMSpace/core/src/decl/: Kokkos_Declare_NVSHMEMSpace.hpp
NVSHMEMSpace/core/src/fwd/: Kokkos_Fwd_NVSHMEMSpace.hpp
NVSHMEMSpace/core/src/impl/: Kokkos_NVSHMEM_ViewMapping.hpp
NVSHMEMSpace/core/unit_test/: CMakeLists.txt
RemoteSpaces/: CMakeLists.txt
RemoteSpaces/cmake/: ConfigurePlugin.cmake  KokkosCore_config_remotespaces.h.in  LinkCoreTPL.cmake
RemoteSpaces/cmake/Modules/: FindNVSHMEM.cmake
RemoteSpaces/core/src/: CMakeLists.txt  Kokkos_MPISpace.hpp  Kokkos_NVSHMEM_Space.hpp  Kokkos_Post_Include_RemoteSpaces.hpp  Kokkos_QUOSpace.hpp  Kokkos_RemoteSpaces.hpp  Kokkos_SHMEMSpace.hpp  Kokkos_SetDefault_RemoteSpace.hpp
RemoteSpaces/core/src/decl/: Kokkos_Declare_RemoteSpaces.hpp
RemoteSpaces/core/src/fwd/: Kokkos_Fwd_RemoteSpaces.hpp
RemoteSpaces/core/src/impl/: Kokkos_MPISpace.cpp  Kokkos_MPISpace_ViewMapping.hpp  Kokkos_NVSHMEM_Space.cpp  Kokkos_NVSHMEM_ViewMapping.hpp  Kokkos_QUOSpace.cpp  Kokkos_SHMEMSpace.cpp  Kokkos_SHMEM_ViewMapping.hpp
RemoteSpaces/core/unit_test/: CMakeLists.txt  Test_Allocation.cpp  Test_Main.cpp  Test_NVSHMEM_Main.cpp
SICMSpace/: CMakeLists.txt  README.md
SICMSpace/cmake/: LinkCoreTPL.cmake
SICMSpace/core/src/: Kokkos_SICMSpace.hpp
SICMSpace/core/src/decl/: Kokkos_Declare_SICMSpace.hpp
SICMSpace/core/src/fwd/: Kokkos_Fwd_SICMSpace.hpp
SICMSpace/core/src/impl/: Kokkos_SICMSpace.cpp
SICMSpace/core/unit_test/: CMakeLists.txt
SICMSpace/core/unit_test/hpx/: TestHPX_SICMSpace.cpp
SICMSpace/core/unit_test/openmp/: TestOpenMP_SICMSpace.cpp
SICMSpace/core/unit_test/serial/: TestSerial_SICMSpace.cpp
SICMSpace/core/unit_test/threads/: TestThreads_SICMSpace.cpp
UmpireSpace/: CMakeLists.txt  README.md
UmpireSpace/cmake/: LinkCoreTPL.cmake
UmpireSpace/core/src/: Kokkos_Post_Include_UmpireSpace.hpp  Kokkos_UmpireSpace.hpp
UmpireSpace/core/src/decl/: Kokkos_Declare_UmpireSpace.hpp
UmpireSpace/core/src/fwd/: Kokkos_Fwd_UmpireSpace.hpp
UmpireSpace/core/src/impl/: Kokkos_UmpireSpace.cpp
UmpireSpace/core/unit_test/: CMakeLists.txt  TestUmpireAllocators.hpp
UmpireSpace/core/unit_test/cuda/: TestCuda_UmpireMemorySpace.cpp
UmpireSpace/core/unit_test/hpx/: TestHPX_UmpireMemorySpace.cpp
UmpireSpace/core/unit_test/serial/: TestSerial_UmpireMemorySpace.cpp
UmpireSpace/core/unit_test/threads/: TestThreads_UmpireMemorySpace.cpp
UmpireSpace/core/unit_tests/cuda/: TestCuda_UmpireMemorySpace.cpp
UmpireSpace/core/unit_tests/hpx/: TestHPX_UmpireMemorySpace.cpp
UmpireSpace/core/unit_tests/openmp/: TestOpenMP_UmpireMemorySpace.cpp
UmpireSpace/core/unit_tests/serial/: TestSerial_UmpireMemorySpace.cpp
