

INSTALL (DIRECTORY
  "${CMAKE_CURRENT_LIST_DIR}/"
  DESTINATION ${KOKKOS_HEADER_DIR}
  FILES_MATCHING PATTERN "*.hpp"
)

IF (KOKKOS_ENABLE_NVSHMEMSPACE)
   APPEND_GLOB(KOKKOS_CORE_SRCS ${CMAKE_CURRENT_LIST_DIR}/impl/Kokkos_NVSHMEM_Space.cpp)
ENDIF()

IF (KOKKOS_ENABLE_MPISPACE)
   APPEND_GLOB(KOKKOS_CORE_SRCS ${CMAKE_CURRENT_LIST_DIR}/impl/Kokkos_MPISpace.cpp)
ENDIF()

IF (KOKKOS_ENABLE_QUOSPACE)
   APPEND_GLOB(KOKKOS_CORE_SRCS ${CMAKE_CURRENT_LIST_DIR}/impl/Kokkos_QUOSpace.cpp)
ENDIF()

IF (KOKKOS_ENABLE_SHMEMSPACE)
   APPEND_GLOB(KOKKOS_CORE_SRCS ${CMAKE_CURRENT_LIST_DIR}/impl/Kokkos_SHMEMSpace.cpp)
ENDIF()
