
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../cmake/Modules")

IF( KOKKOS_ENABLE_NVSHMEMSPACE)
   FIND_PACKAGE(NVSHMEM REQUIRED)

   KOKKOS_ADD_EXECUTABLE_AND_TEST(
      Test_NVSHMEM_Cuda
      SOURCES
      ${CMAKE_CURRENT_LIST_DIR}/Test_NVSHMEM_Main.cpp
      ${CMAKE_CURRENT_LIST_DIR}/Test_Allocation.cpp)

   TARGET_LINK_LIBRARIES(KokkosCore_Test_NVSHMEM_Cuda LINK_PUBLIC NVSHMEM::NVSHMEM)
   TARGET_LINK_LIBRARIES(KokkosCore_Test_NVSHMEM_Cuda LINK_PUBLIC NVSHMEM::OSHMEM)
ENDIF()
