
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../cmake/Modules")

IF( KOKKOS_ENABLE_QUOMEMSPACE)
   FIND_PACKAGE(QUO REQUIRED)

   KOKKOS_ADD_EXECUTABLE_AND_TEST(
      Test_QUO_OpenMP
      SOURCES
      ${CMAKE_CURRENT_LIST_DIR}/Test_Main.cpp
      ${CMAKE_CURRENT_LIST_DIR}/Test_Allocation.cpp)

   TARGET_LINK_LIBRARIES(KokkosCore_Test_QUO_OpenMP LINK_PUBLIC QUO::QUO)
   TARGET_LINK_LIBRARIES(KokkosCore_Test_QUO_OpenMP LINK_PUBLIC MPI::MPI_CXX)
   target_compile_definitions(KokkosCore_Test_QUO_OpenMP PUBLIC KOKKOS_ENABLE_QUO_TEST)
ENDIF()

IF( KOKKOS_ENABLE_SHMEMSPACE)
   FIND_PACKAGE(SHMEM REQUIRED)

   KOKKOS_ADD_EXECUTABLE_AND_TEST(
      Test_SHMEM_OpenMP
      SOURCES
      ${CMAKE_CURRENT_LIST_DIR}/Test_Main.cpp
      ${CMAKE_CURRENT_LIST_DIR}/Test_Allocation.cpp)

   TARGET_LINK_LIBRARIES(KokkosCore_Test_SHMEM_OpenMP LINK_PUBLIC SHMEM::SHMEM)
   TARGET_LINK_LIBRARIES(KokkosCore_Test_SHMEM_OpenMP LINK_PUBLIC MPI::MPI_CXX)
   target_compile_definitions(KokkosCore_Test_SHMEM_OpenMP PUBLIC KOKKOS_ENABLE_SHMEM_TEST)
ENDIF()

IF( KOKKOS_ENABLE_MPISPACE)
   FIND_PACKAGE(MPI REQUIRED)

   KOKKOS_ADD_TEST_EXECUTABLE(
      KokkosCore_Test_MPI_OpenMP
      SOURCES
      ${CMAKE_CURRENT_LIST_DIR}/Test_Main.cpp
      ${CMAKE_CURRENT_LIST_DIR}/Test_Allocation.cpp)

   TARGET_LINK_LIBRARIES(KokkosCore_Test_MPI_OpenMP LINK_PUBLIC MPI::MPI_CXX)
   target_compile_definitions(KokkosCore_Test_MPI_OpenMP PUBLIC KOKKOS_ENABLE_MPI_TEST)

   KOKKOS_ADD_TEST( NAME KokkosCore_Test_MPI_OpenMP
                    EXE  mpirun
                    FAIL_REGULAR_EXPRESSION "FAILED"
                    CMD_ARGS -n 1 KokkosCore_Test_MPI_OpenMP
                  )
ENDIF()

IF( KOKKOS_ENABLE_NVSHMEMSPACE)
   FIND_PACKAGE(NVSHMEM REQUIRED)

   KOKKOS_ADD_EXECUTABLE_AND_TEST(
      Test_NVSHMEM_Cuda
      SOURCES
      ${CMAKE_CURRENT_LIST_DIR}/Test_Main.cpp
      ${CMAKE_CURRENT_LIST_DIR}/Test_Allocation.cpp)

   TARGET_LINK_LIBRARIES(KokkosCore_Test_NVSHMEM_Cuda LINK_PUBLIC NVSHMEM::NVSHMEM)
   TARGET_LINK_LIBRARIES(KokkosCore_Test_NVSHMEM_Cuda LINK_PUBLIC NVSHMEM::OSHMEM)
   TARGET_LINK_LIBRARIES(KokkosCore_Test_NVSHMEM_Cuda LINK_PUBLIC MPI::MPI_CXX)
   target_compile_definitions(KokkosCore_Test_NVSHMEM_Cuda PUBLIC KOKKOS_ENABLE_NVSHMEM_TEST)
ENDIF()
